--- a/ClassLibrary1/Recipe.Core.csproj
+++ b/ClassLibrary1/Recipe.Core.csproj
@@ -7,11 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="4.2.0" />
+    <PackageReference Include="MimeKit" Version="4.2.0" />
     <PackageReference Include="Oracle.EntityFrameworkCore" Version="7.21.11" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="DTO\" />
   </ItemGroup>
 
 </Project>
